[package]
name = "loft"
version = "0.0.1-alpha.17"
edition = "2024"
license = "MIT"

description = "'rust at home'"
repository = "https://github.com/themackabu/loft"

[lib]
name = "loft"
path = "src/loft/lib.rs"

[[bin]]
name = "loft"
path = "src/loft.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
# macros-rs = "1.4.1"
